--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "jquery": "^3.3.1",
     "lottie-web": "^5.2.0",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.9.2",
