--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.6.0",
     "chalk": "^2.0.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "copy-webpack-plugin": "^8.0.0",
+    "css-loader": "^5.1.3",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.6.0",
     "lottie-web": "^5.2.0",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.9.2",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "ora": "^1.2.0",
     "popper.js": "^1.14.4",
     "portfinder": "^1.0.13",
@@ -51,14 +51,15 @@
     "shelljs": "^0.7.6",
     "smooth-scroll": "^14.2.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
+    "url-loader": "^4.1.1",
     "vue-animejs": "^1.0.1",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack": "^5.26.2",
+    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
